# FLAT-backend

./: .env  .gitignore  .gitmodules  Cargo.toml  README.md  diesel.toml  docker-compose.test.yaml  docker-compose.yml  init.sh  sparse-checkout
.devcontainer/: devcontainer.json  docker-compose.yml
.github/ISSUE_TEMPLATE/: config.yaml  issue.md
.github/workflows/: CI.yml
Docker/mysql/: .env
Docker/rust/: Dockerfile
flat_backend/: .env  Cargo.toml
flat_backend/migrations/2021-10-04-101653_test1/: up.sql
flat_backend/migrations/2021-10-04-101653_users/: up.sql
flat_backend/migrations/2021-10-13-055724_friends/: down.sql  up.sql
flat_backend/src/: friends.rs  main.rs  model.rs  schema.rs  user.rs  view.rs
flat_backend/src/controller/: friends.rs  user.rs
flat_backend/src/friends/: controller.rs  model.rs  view.rs
flat_backend/src/friends/model/: add_friend.rs
flat_backend/src/model/: add_friend.rs  connect_db.rs  db_insert.rs  db_util.rs  friends.rs  types.rs  user.rs
flat_backend/src/user/: controller.rs  view.rs
migrations/2021-10-04-101653_users/: down.sql  up.sql
migrations/2021-10-13-055724_friends/: up.sql
migrations/2021-10-30-082431_spots/: down.sql  up.sql
scripts/: import_csv.sh  load_ssh_key.sh  start.sh  start_test.sh  wait-for-it.sh
secrets/: MYSQL_PASSWORD_FILE.txt
src/: controller.rs  lib.rs  main.rs  model.rs  read_csv.rs  read_csv_and_write_db.rs  repository.rs  schema.rs  util.rs  view.rs  worker.rs
src/controller/: friends.rs  user.rs  users.rs
src/friends/: model.rs  view.rs
src/model/: db_util.rs  friends.rs  types.rs  user.rs  users.rs
src/user/: controller.rs
src/worker/: controller.rs  read_csv_and_write_db.rs  repository.rs  schema.rs  utils.rs  view.rs
src/worker/controller/: friends.rs  users.rs
src/worker/model/: db_util.rs  friends.rs  types.rs  users.rs
src/worker/utils/: image_crop.rs  open_password.rs  (+1 more)
test-beacons/src/: spots.csv
test-sh/: add-friend.sh  create-user.sh  login.sh  rename.sh  test0101.sh
tests/: fake_gcs_upload.rs  test.rs  upload_gcs.rs
