[package]
name = "flat_backend"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.2.6"
hyper = { version = "0.14.13", features = ["full"] }
serde = { version = "1.0.130", features = ["derive"] }
serde_json = "1.0.68"
tokio = { version = "1.12.0", features = ["full"] }
tracing = "0.1.29"
tracing-subscriber = "0.2.25"
validator = { version = "0.14", features = ["derive"] }
once_cell = "1.8.0"
regex = "1.5.4"
diesel = { version = "1.4.8", features = ["mysql"] }
dotenv = "0.15.0"
