[package]
name = "flat_backend"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.5.11"
hyper = { version = "0.14.19", features = ["full"] }
serde = { version = "1.0.130", features = ["derive"] }
serde_json = "1.0.68"
tokio = { version = "1.12.0", features = ["full"] }
tracing = "0.1.29"
tracing-subscriber = "0.3.1"
validator = { version = "0.15", features = ["derive"] }
once_cell = "1.8.0"
regex = "1.5.4"
diesel = { version = "1.4.8", features = ["mysql", "chrono"] }
dotenv = "0.15.0"
chrono = { version = "0.4.19", features = ["serde"] }
reqwest = { version = "0.11.6", features = ["json"] }
csv = "1.1"
ring = "0.16.20"
data-encoding = "2.3.2"
image = "0.24.2"
base64 = "0.13.0"
cloud-storage = "0.11.1"
http-body = "0.4.5"
